log
ma., 13 de may. de 2025 22:55:57: 
 sudoku.c | 23 +++++++++++++++++++++++
 1 file changed, 23 insertions(+)
Compilation failed
In file included from test.c:5:
sudoku.c: In function 'is_valid':
sudoku.c:47:15: error: unused variable 'l' [-Werror=unused-variable]
   47 |     int i,j,k,l;
      |               ^
test.c: At top level:
test.c:7:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
3f0e54c
ma., 13 de may. de 2025 22:56:38: 
 tests:  3|4
total_score: 20/70
798d508
ma., 13 de may. de 2025 23:04:59: 
 sudoku.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
 tests:  5|3
total_score: 35/70
29b7710
ma., 13 de may. de 2025 23:08:47: 
 sudoku.c | 11 +++++------
 1 file changed, 5 insertions(+), 6 deletions(-)
 tests:  0|5
total_score: 0/70
e67651f
ma., 13 de may. de 2025 23:09:53: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
16ca4d8
ma., 13 de may. de 2025 23:10:33: 
 sudoku.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
b495ae4
ma., 13 de may. de 2025 23:14:03: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
5358038
ma., 13 de may. de 2025 23:23:40: 
 sudoku.c | 22 ++++++++++++++++++----
 1 file changed, 18 insertions(+), 4 deletions(-)
 tests:  2|4
total_score: 15/70
57a4443
ma., 13 de may. de 2025 23:26:37: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  2|4
total_score: 15/70
c5d4999
ma., 13 de may. de 2025 23:37:45: 
 sudoku.c | 28 +++++++++-------------------
 1 file changed, 9 insertions(+), 19 deletions(-)
 tests:  5|3
total_score: 35/70
4e9dd85
ma., 13 de may. de 2025 23:40:18: 
 sudoku.c | 8 ++------
 1 file changed, 2 insertions(+), 6 deletions(-)
 tests:  5|3
total_score: 35/70
635c2d3
ma., 13 de may. de 2025 23:40:57: 
 sudoku.c | 8 +-------
 1 file changed, 1 insertion(+), 7 deletions(-)
 tests:  5|3
total_score: 35/70
fa5afaf
ma., 13 de may. de 2025 23:42:54: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
b462c54
ma., 13 de may. de 2025 23:45:22: 
 sudoku.c | 16 ++++++++++++----
 1 file changed, 12 insertions(+), 4 deletions(-)
 tests:  5|3
total_score: 35/70
d925b3f
ma., 13 de may. de 2025 23:47:06: 
 sudoku.c | 15 +++------------
 1 file changed, 3 insertions(+), 12 deletions(-)
 tests:  5|3
total_score: 35/70
23a911d
ma., 13 de may. de 2025 23:48:03: 
 sudoku.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
 tests:  5|3
total_score: 35/70
e58caff
ma., 13 de may. de 2025 23:50:07: 
 sudoku.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
d42ba80
ma., 13 de may. de 2025 23:59:24: 
 sudoku.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
b57b278
mi., 14 de may. de 2025  0:05:01: 
 sudoku.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
0fc8a5b
mi., 14 de may. de 2025  0:06:15: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
Compilation failed
test.c: In function 'is_valid':
test.c:245:5: warning: 'main' is normally a non-static function [-Wmain]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:262:1: error: expected declaration or statement at end of input
  262 | }
      | ^
In file included from test.c:5:
sudoku.c:47:15: warning: unused variable 'p' [-Wunused-variable]
   47 |     int i,j,k,p;
      |               ^
test.c:264: warning: control reaches end of non-void function [-Wreturn-type]
test.c: At top level:
test.c:245:5: warning: 'main' defined but not used [-Wunused-function]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:7:8: warning: '_strdup' defined but not used [-Wunused-function]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
465cdce
mi., 14 de may. de 2025  0:06:36: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
699040c
mi., 14 de may. de 2025  0:22:34: 
 sudoku.c | 57 ++++++++++++++++++++++++++++-----------------------------
 1 file changed, 28 insertions(+), 29 deletions(-)
 tests:  5|3
total_score: 35/70
0fbb626
mi., 14 de may. de 2025  0:27:40: 
 sudoku.c | 59 +++++++++++++++++++++++++++++++----------------------------
 1 file changed, 31 insertions(+), 28 deletions(-)
 tests:  3|4
total_score: 20/70
69a5ca6
mi., 14 de may. de 2025  0:39:15: 
 sudoku.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  5|3
total_score: 35/70
e22f467
mi., 14 de may. de 2025  0:42:46: 
 sudoku.c | 52 +++++++++++++++++++++++++++++++++++++++++++++++-----
 1 file changed, 47 insertions(+), 5 deletions(-)
 tests:  5|3
total_score: 35/70
95614fc
mi., 14 de may. de 2025  0:53:46: 
 sudoku.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  5|3
total_score: 35/70
4503bfa
mi., 14 de may. de 2025  0:54:48: 
 sudoku.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  6|2
total_score: 45/70
95fc3e2
mi., 14 de may. de 2025  0:59:37: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  7|1
total_score: 55/70
df9962d
ju., 15 de may. de 2025 10:20:29: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|3
total_score: 30/70
c5a1692
ju., 15 de may. de 2025 10:22:15: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 55/70
82fe7c3
ju., 15 de may. de 2025 10:24:34: 
 sudoku.c | 30 +++++-------------------------
 1 file changed, 5 insertions(+), 25 deletions(-)
 tests:  3|3
total_score: 25/70
37e3654
ju., 15 de may. de 2025 10:25:22: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  3|3
total_score: 25/70
54773ab
ju., 15 de may. de 2025 10:26:08: 
 sudoku.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  7|1
total_score: 55/70
667f3d8
ju., 15 de may. de 2025 10:42:32: 
 sudoku.c | 25 ++++++++++++++++++++++++-
 1 file changed, 24 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
sudoku.c: In function 'DFS':
sudoku.c:149:10: error: implicit declaration of function 'size'; did you mean '_msize'? [-Wimplicit-function-declaration]
  149 |   while (size(S) != 0){
      |          ^~~~
      |          _msize
sudoku.c:152:9: error: implicit declaration of function 'is_visited'; did you mean 'is_valid'? [-Wimplicit-function-declaration]
  152 |      if(is_visited(n))continue;
      |         ^~~~~~~~~~
      |         is_valid
sudoku.c:162:6: error: implicit declaration of function 'visit' [-Wimplicit-function-declaration]
  162 |      visit(n);
      |      ^~~~~
test.c: At top level:
test.c:7:8: warning: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Wattributes]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
sudoku.c: In function 'DFS':
sudoku.c:171:1: warning: control reaches end of non-void function [-Wreturn-type]
  171 | }
      | ^
52e754c
ju., 15 de may. de 2025 10:43:16: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
sudoku.c: In function 'DFS':
sudoku.c:149:10: error: implicit declaration of function 'size'; did you mean '_msize'? [-Wimplicit-function-declaration]
  149 |   while (size(S) != 0){
      |          ^~~~
      |          _msize
sudoku.c:152:9: error: implicit declaration of function 'is_visited'; did you mean 'is_valid'? [-Wimplicit-function-declaration]
  152 |      if(is_visited(n))continue;
      |         ^~~~~~~~~~
      |         is_valid
test.c: At top level:
test.c:7:8: warning: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Wattributes]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
sudoku.c: In function 'DFS':
sudoku.c:171:1: warning: control reaches end of non-void function [-Wreturn-type]
  171 | }
      | ^
be5f23c
